Atualização de links

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="Home"></a> <br>
             <a href="itchio.html" target="tela"><img src="imagens/logo-itchaio.jpg" alt="Home"></a> <br>
             <a href="sketchfab.html" target="tela"><img src="imagens/logo-skechfab.jpg" alt="Home"></a> <br>
+            <a href="linkedin.html" target="tela"><img src="imagens/logo-linkedin.jpg" alt="Home"></a> <br>
         </section>
     </main>
 </body>
