--- a/facebook.html
+++ b/facebook.html
@@ -7,7 +7,7 @@
     <title>Facebook</title>
 </head>
 <body>
-    <img src="imagens/insta.jpg" alt="Facebook">
+    <img src="imagens/tela-facebook.jpg" alt="Facebook">
     <a href="https://www.facebook.com/anderson.toninthums" target="_blank">ACESSE</a>
 </body>
 </html>
