--- a/itchio.html
+++ b/itchio.html
@@ -7,7 +7,7 @@
     <title>Itch.io</title>
 </head>
 <body>
-    <img src="imagens/insta.jpg" alt="Itch.io">
+    <img src="imagens/tela-itchaio.jpg" alt="Itch.io">
     <a href="https://andersontt.itch.io/" target="_blank">ACESSE</a>
 </body>
 </html>
