--- a/linkedin.html
+++ b/linkedin.html
@@ -7,7 +7,7 @@
     <title>Linkedin</title>
 </head>
 <body>
-    <img src="imagens/insta.jpg" alt="Linkedin">
+    <img src="imagens/tela-linkedin.jpg" alt="Linkedin">
     <a href="https://www.linkedin.com/in/anderson-tonin-thums-a1a494211/" target="_blank">ACESSE</a>
 </body>
 </html>
