--- a/sketchfab.html
+++ b/sketchfab.html
@@ -7,7 +7,7 @@
     <title>Sketchfab</title>
 </head>
 <body>
-    <img src="imagens/insta.jpg" alt="SketchFab">
+    <img src="imagens/tela-sketchfab.jpg" alt="SketchFab">
     <a href="https://sketchfab.com/AnderTThums" target="_blank">ACESSE</a>
 </body>
 </html>
