--- a/github.html
+++ b/github.html
@@ -7,7 +7,7 @@
     <title>GitHub</title>
 </head>
 <body>
-    <img src="imagens/insta.jpg" alt="GitHub">
+    <img src="imagens/tela-github.jpg" alt="GitHub">
     <a href="https://github.com/ATThums" target="_blank">ACESSE</a>
 </body>
 </html>
